<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/permission"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="bottom|center"
            android:background="@color/white"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Scrollable content -->
        <ScrollView
            android:id="@+id/permission_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:background="@android:color/white"
            app:layout_constraintTop_toBottomOf="@id/titleText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp"
                android:gravity="center_horizontal">

                <!-- Lock Image -->
                <ImageView
                    android:id="@+id/lockImage"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/icon_permission"
                    android:layout_marginBottom="16dp"
                    android:contentDescription="@string/image" />

                <!-- Description -->
                <TextView
                    android:id="@+id/descriptionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/grant_camera_amp_files_access"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/app_color"
                    android:textSize="@dimen/_17ssp"
                    android:layout_marginBottom="24dp" />

                <!-- Storage Permission -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_file"
                        android:layout_marginEnd="16dp" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/storage"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/we_will_need_your_storage_permission_to_give_you_better_experience"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchStorage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:thumbTint="#EC8C7C"
                        app:trackTint="#EC8C7C"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>

                <!-- Notification Permission -->
                <LinearLayout
                    android:id="@+id/notificationsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="32dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/icon_notifications_permission"
                        android:layout_marginEnd="16dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/notification_history"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchNotification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:thumbTint="@color/app_color"
                        app:trackTint="@color/dark_gray"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>

                <!-- Camera Permission -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="16dp">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:src="@drawable/ic_camera"
                        android:layout_marginEnd="16dp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/camera"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@color/black" />

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switchCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:thumbTint="@color/app_color"
                        app:trackTint="@color/dark_gray"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </LinearLayout>



                <!-- Continue Button -->
                <Button
                    android:id="@+id/btnContinue"
                    android:layout_width="@dimen/_260sdp"
                    android:layout_height="wrap_content"
                    android:text="@string/give_access"
                    android:textSize="@dimen/_15ssp"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:background="@drawable/button_bg" />


            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>